--- a/style.css
+++ b/style.css
@@ -1,27 +1,20 @@
+/* Styling tambahan untuk header */
 .header {
-      background-color: #9966CC; /* amethys */
-      color: #ECF3FB; /* pale sky */
-      padding: 15px 20px;
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      flex-wrap: wrap;
-      border-bottom: 2px solid #ECF3FB;
-    }
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #9966CC;
+  padding: 10px 20px;
+}
 
-  .center-title {
-      flex: 1;
-      text-align: center;
-      font-size: 24px;
-      font-weight: bold;
-      letter-spacing: 1px;
-      color: #ECF3FB;
-    }
-
+.center-title {
+  font-size: 24px;
+  font-weight: bold;
+}
 
 /* Styling untuk navbar */
 .navbar {
-  background-color: #9966CC;  /* Sama dengan header */
+  background-color: #f8f9fa;  /* Sama dengan header */
   padding: 10px 20px;
 }
 
@@ -36,7 +29,7 @@
 /* Styling navbar untuk tampilan mobile */
 @media (max-width: 991px) {
   .navbar-nav {
-    background-color: #f8f9fa;
+    background-color: #9966CC;
   }
   
   .navbar-nav .nav-item {
@@ -50,6 +43,7 @@
     top: 20px;
   }
 }
+
 
  .logo-left {
       display: flex;
