--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@
     .center-title {
       flex: 1;
       text-align: center;
-      font-size: 22px;
+      font-size: 24px;
       font-weight: bold;
       letter-spacing: 1px;
       color: #ECF3FB;
@@ -46,7 +46,7 @@
 
     nav a:hover {
       background-color: #d4bee9;
-      color: #000;
+      color: #ECF3FB;
     }
 
     @media (max-width: 600px) {
