--- a/style.css
+++ b/style.css
@@ -36,18 +36,21 @@
       border-top: 1px solid #673ab7; /* pale sky */
     }
 
-    nav a {
-      color: #ECF3FB;
-      text-decoration: none;
-      padding: 12px 18px;
-      display: block;
-      transition: background 0.3s, color 0.3s;
-    }
-
+   nav a {
+  color: #ECF3FB;
+  text-decoration: none;
+  padding: 12px 18px;
+  display: block;
+  font-weight: bold; /* Menambah ketebalan */
+  font-size: 16px; /* Ukuran lebih besar */
+  transition: background 0.3s, color 0.3s;
+}
     nav a:hover {
-      background-color: #d4bee9;
-      color: #ECF3FB;
-    }
+  background-color: #d4bee9;
+  color: #000;
+  width: 100%; /* Hover area mengikuti lebar container */
+  box-sizing: border-box;
+}
 
     @media (max-width: 600px) {
       nav {
@@ -71,7 +74,9 @@
 
   /* Menempatkan burger menu di kiri */
   .navbar-toggler {
-    position: absolute;
+  background-color: #d9c7ec;
+  border: none;
+        position: absolute;
     left: 20px; /* Burger menu di kiri */
     top: 15px;
   }
