--- a/style.css
+++ b/style.css
@@ -36,19 +36,20 @@
       border-top: 1px solid #673ab7; /* pale sky */
     }
 
-   nav a {
-  color: #ECF3FB;
+  nav a {
+  color: #ECF3FB !important;
   text-decoration: none;
   padding: 12px 18px;
   display: block;
-  font-weight: bold; /* Menambah ketebalan */
-  font-size: 16px; /* Ukuran lebih besar */
+  font-weight: bold;         /* Tulisan tebal */
+  font-size: 17px;           /* Tulisan lebih besar */
   transition: background 0.3s, color 0.3s;
 }
-    nav a:hover {
+
+ nav a:hover {
   background-color: #d4bee9;
-  color: #000;
-  width: 100%; /* Hover area mengikuti lebar container */
+  color: #000 !important;
+  width: 100%;
   box-sizing: border-box;
 }
 
