--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@
       color: #ECF3FB;
     }
 
-    .nav {
+    nav {
       background-color: #9966CC; /* amethys */
       display: flex;
       justify-content: center;
@@ -50,7 +50,7 @@
     }
 
     @media (max-width: 600px) {
-      .nav {
+      nav {
         flex-direction: column;
         align-items: center;
       }
