--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@
       border-top: 1px solid #673ab7; /* pale sky */
     }
 
- .nav a {
+ nav a {
       color: #ECF3FB;
       text-decoration: none;
       padding: 12px 18px;
