--- a/style.css
+++ b/style.css
@@ -284,7 +284,7 @@ table {
 
 /* Gaya Header Tabel */
 table th {
-    background-color: #9966CC !important;
+    background-color: #9966cc !important;
     color: black;
     padding: 14px;
     text-align: left;
@@ -293,7 +293,7 @@ table th {
 }
 
 table th:hover {
-    background-color: #673AB7 
+    background-color: #9966cc; 
     color: white;
 }
 
