--- a/style.css
+++ b/style.css
@@ -512,3 +512,57 @@ footer {
     text-align: center;
     width: 100%;
 }
+
+/* Dropdown container */
+.dropdown {
+  position: relative;
+}
+
+/* Dropdown toggle */
+.dropdown-toggle {
+  cursor: pointer;
+  display: inline-block;
+  padding: 12px 18px;
+  color: #ECF3FB;
+  font-weight: bold;
+  text-decoration: none;
+}
+
+/* Dropdown menu */
+.dropdown-menu {
+  display: none;
+  position: absolute;
+  background-color: #9966CC;
+  min-width: 160px;
+  box-shadow: 0px 2px 6px rgba(0,0,0,0.2);
+  z-index: 999;
+  top: 100%;
+  left: 0;
+}
+
+.dropdown-menu a {
+  color: #ECF3FB;
+  padding: 10px 16px;
+  display: block;
+  text-decoration: none;
+}
+
+.dropdown-menu a:hover {
+  background-color: #d4bee9;
+  color: #000;
+}
+
+/* Tampilkan dropdown saat hover di desktop */
+@media (min-width: 601px) {
+  .dropdown:hover .dropdown-menu {
+    display: block;
+  }
+}
+
+/* Untuk mobile, dropdown dibuka manual */
+@media (max-width: 600px) {
+  .dropdown-menu {
+    position: static;
+    box-shadow: none;
+  }
+}
