--- a/style.css
+++ b/style.css
@@ -529,9 +529,8 @@ footer {
 }
 
 /* Dropdown menu */
-.dropdown-menu {
-  max-height: 0;
-  overflow: hidden;
+..dropdown-menu {
+  display: none;
   position: absolute;
   background-color: #9966CC;
   min-width: 160px;
@@ -539,8 +538,6 @@ footer {
   z-index: 999;
   top: 100%;
   left: 0;
-  border-radius: 8px;
-  transition: max-height 0.4s ease;
 }
 
 .dropdown-menu a {
@@ -558,10 +555,9 @@ footer {
 /* Tampilkan dropdown saat hover di desktop */
 @media (min-width: 601px) {
   .dropdown:hover .dropdown-menu {
-    max-height: 300px; /* atau tinggi yang kamu perlukan */
+    display: block;
   }
 }
-
 /* Untuk mobile, dropdown dibuka manual */
 @media (max-width: 600px) {
   .dropdown-menu {
@@ -571,7 +567,7 @@ footer {
 }
 
  .dropdown-menu.show {
-  max-height: 300px; /* Atur sesuai tinggi konten maksimal */
+  display: block;
 }
 
 .intro-section {
