--- a/style.css
+++ b/style.css
@@ -652,7 +652,7 @@ footer {
   bottom: 0;
   left: 0;
   right: 0;
-  background-color: #4B0082;
+  background-color: #9966CC;
   color: #fff;
   padding: 15px;
   text-align: center;
